# zserio-tutorial-cpp

./: CMakeLists.txt  dictionary.zs  filter.zs  skip_dictionary.md  values.zs
src/: skipdict.cpp
src/skipdict/dictionary/: DictEntry.h  DictOffsets.h  Dictionary.cpp  SkippableDictionary.h
src/skipdict/filter/: DictEntry.h  Filter.cpp  SkipableDictionary.h
src/skipdict/values/: BasketballTeam.h  CloudStorage.h  Company.h  RockBand.h  Value.h  ValueCode.h  Values.cpp
